fix nav wrap

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -1212,6 +1212,12 @@ $reveal-modal-bg: $grey-bg;
 // $include-table-visibility-classes: true;
 // $include-legacy-visibility-classes: true;
 
+$nav-menu-height: 75px;
+
+.wrapper-body {
+	margin-bottom: $nav-menu-height;
+}
+
 .nav-bg {
 	@include panel (
 		$bg: $primary-color
@@ -1234,6 +1240,12 @@ $reveal-modal-bg: $grey-bg;
 		$bg: $primary-color,
 		$radius: 50em
 		);
+}
+
+.spacer {
+	position: relative;
+	width: 100%;
+	height: 10em;
 }
 
 
